test/testdata/variables/redefined_error.lox
var a = 1;
var a = 2; // error: a has already been declared
_ = a; // suppress unused declaration error
